syntax = "proto3";
option java_generic_services = true;
option java_multiple_files = true;
option java_package = "org.catmq.protocol.produce";
import "Structure.proto";

service ProduceService {
  rpc SendMessage2Broker (SendMessage2BrokerRequest) returns (SendMessage2BrokerReply) {}
}

message SendMessage2BrokerRequest {
  string topic = 1;
  string message = 2;
}

message SendMessage2BrokerReply {
  bool ack = 1;
  string res = 2;
}

message SendMessage2StorerRequest {
  KvPair info = 1;
}

message SendMessage2StorerReply {
  bool ack = 1;
}